--- a/app/src/main/res/layout/source_list_fragment.xml
+++ b/app/src/main/res/layout/source_list_fragment.xml
@@ -37,23 +37,15 @@
         android:layout_height="@dimen/fab"
         android:layout_gravity="bottom|right|end"
         android:layout_margin="@dimen/gapLarge"
-        android:scaleType="centerInside" />
+        android:visibility="gone" />
 
     <tr.xip.errorview.ErrorView xmlns:errorview="http://schemas.android.com/apk/res-auto"
         android:id="@+id/error_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
         errorview:ev_showRetryButton="true"
         errorview:ev_showSubtitle="true"
         errorview:ev_showTitle="true" />
-
-    <android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@id/fabButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        app:borderWidth="0dp" />
-
 </FrameLayout>
