Add menu to source

--- a/app/src/main/res/layout/source_list_fragment.xml
+++ b/app/src/main/res/layout/source_list_fragment.xml
@@ -27,7 +27,9 @@
                 android:id="@id/recycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:drawSelectorOnTop="false" />
+                android:drawSelectorOnTop="false"
+                android:paddingBottom="72dp"
+                android:clipToPadding="false"/>
         </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
