--- a/app/src/main/res/menu/repo_content_item.xml
+++ b/app/src/main/res/menu/repo_content_item.xml
@@ -7,7 +7,10 @@
     <item android:title="@string/open_in_intent"
         android:id="@+id/action_content_open"/>
 
-    <item android:title="@string/history"
-        android:id="@+id/action_content_history"/>
+<!--    <item android:title="@string/history"
+        android:id="@+id/action_content_history"/>-->
+
+    <item android:title="@string/copy_content_url"
+        android:id="@+id/action_copy_content_url"/>
 
 </menu>
