--- a/app/src/main/res/layout/row_user_square.xml
+++ b/app/src/main/res/layout/row_user_square.xml
@@ -8,7 +8,8 @@
     <ImageView
         android:id="@+id/avatarAuthorImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"/>
 
     <LinearLayout
         android:layout_width="match_parent"
