--- a/app/src/main/res/drawable/bg_event_commits.xml
+++ b/app/src/main/res/drawable/bg_event_commits.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#9697d2ff" />
+    <solid android:color="@color/commit_stats_bg" />
     <stroke
         android:width="1dp"
-        android:color="#a883bae7" />
+        android:color="@color/commit_stats_stroke" />
     <corners android:radius="2dp" />
 
 </shape>
