--- a/app/src/main/res/layout/row_issue.xml
+++ b/app/src/main/res/layout/row_issue.xml
@@ -1,81 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?selectableItemBackground"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/textTitle"
+        style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textTitle"
-        android:textSize="@dimen/textSizeMedium"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="@dimen/gapMedium"
+        android:layout_marginEnd="@dimen/gapMedium"
         android:layout_marginLeft="@dimen/gapLarge"
+        android:layout_marginRight="@dimen/gapMedium"
         android:layout_marginStart="@dimen/gapLarge"
         android:layout_marginTop="@dimen/gapMedium"
-        android:layout_marginBottom="@dimen/gapMedium"
-        android:layout_toLeftOf="@+id/textTime"
-        android:layout_toStartOf="@+id/textTime"
-        android:layout_marginRight="@dimen/gapMedium"
-        android:layout_marginEnd="@dimen/gapMedium"
+        android:layout_toLeftOf="@+id/textIssueNumber"
+        android:layout_toStartOf="@+id/textIssueNumber"
         android:ellipsize="end"
-        android:singleLine="true" />
+        android:maxLines="2"
+        android:textSize="@dimen/textSizeMedium" />
 
     <TextView
+        android:id="@+id/textIssueNumber"
+        style="@style/TextAppearance.AppCompat.Caption"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/textTime"
-        android:textSize="@dimen/textSizeMedium"
-        android:layout_alignTop="@+id/textTitle"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/textTitle"
+        android:layout_marginEnd="@dimen/gapMedium"
         android:layout_marginRight="@dimen/gapMedium"
-        android:layout_marginEnd="@dimen/gapMedium" />
+        android:textSize="@dimen/textSizeMedium" />
 
     <com.alorma.github.ui.view.CircularImageView
+        android:id="@id/avatarAuthor"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:id="@id/avatarAuthor"
-        android:layout_alignTop="@+id/textAuthor"
         android:layout_alignLeft="@+id/textTitle"
         android:layout_alignStart="@+id/textTitle"
-        android:layout_marginBottom="@dimen/gapLarge"/>
+        android:layout_alignTop="@+id/textAuthor"
+        android:layout_marginBottom="@dimen/gapLarge" />
 
     <TextView
+        android:id="@+id/textAuthor"
+        style="@style/TextAppearance.AppCompat.Caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/textAuthor"
-        android:gravity="center_vertical"
+        android:layout_alignEnd="@+id/textTitle"
+        android:layout_alignRight="@+id/textTitle"
+        android:layout_below="@+id/textTitle"
         android:layout_marginLeft="@dimen/gapMedium"
         android:layout_marginStart="@dimen/gapMedium"
-        android:layout_below="@+id/textTitle"
-        android:layout_toRightOf="@id/avatarAuthor"
         android:layout_toEndOf="@id/avatarAuthor"
-        android:layout_alignRight="@+id/textTitle"
-        android:layout_alignEnd="@+id/textTitle" />
-
-    <View
-        android:layout_width="@dimen/gapSmall"
-        android:layout_height="wrap_content"
-        android:id="@+id/state"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/textAuthor" />
+        android:layout_toRightOf="@id/avatarAuthor"
+        android:gravity="center_vertical"
+        android:textSize="@dimen/textSizeSmall" />
 
     <ImageView
+        android:id="@+id/pullRequest"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:id="@+id/pullRequest"
-        android:layout_below="@+id/textTime"
-        android:layout_alignRight="@+id/textTime"
-        android:layout_alignEnd="@+id/textTime"
+        android:layout_alignEnd="@+id/textIssueNumber"
+        android:layout_alignRight="@+id/textIssueNumber"
+        android:layout_below="@+id/textIssueNumber"
         android:layout_marginTop="@dimen/gapLarge" />
 
 
