--- a/app/src/main/res/menu/issue_list_filter.xml
+++ b/app/src/main/res/menu/issue_list_filter.xml
@@ -2,23 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <item
-        android:title="@string/issue_list_filter"
-        app:showAsAction="never"
-        android:id="@+id/issue_list_filter">
-
-        <menu>
-            <item
-                android:title="@string/issue_list_filter_closed"
-                android:id="@+id/issue_list_filter_closed" />
-            <item
-                android:title="@string/issue_list_filter_open"
-                android:id="@+id/issue_list_filter_open" />
-            <item
-                android:title="@string/issue_list_filter_search"
-                android:id="@+id/issue_list_filter_search" />
-        </menu>
-
-    </item>
+        android:title="@string/action_search"
+        android:id="@+id/action_search"
+        app:showAsAction="always"
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+        android:orderInCategory="3000"/>
 
 </menu>
