Change text to plurals resource if time < 5 sec
We have to provide text as plural resource everywhere, otherwise getQuantityString might crash

--- a/app/src/main/res/values/plurals.xml
+++ b/app/src/main/res/values/plurals.xml
@@ -53,7 +53,10 @@
         <item quantity="other">%d minutes ago</item>
     </plurals>
     <plurals name="seconds_ago">
-        <item quantity="one">%d second</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d second ago</item>
+        <item quantity="other">%d seconds ago</item>
+    </plurals>
+    <plurals name="time_just_now">
+        <item quantity="other">just now</item>
     </plurals>
 </resources>
