--- a/app/src/main/res/layout/issue_detail_issue_timeline_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_timeline_view.xml
@@ -53,7 +53,7 @@
             style="@style/Base.TextAppearance.AppCompat.Caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapMedium"
+            android:layout_marginTop="@dimen/gapSmall"
             android:gravity="center_vertical"
             android:textSize="@dimen/textSizeSmall" />
 
