--- a/app/src/main/res/layout/people_activity.xml
+++ b/app/src/main/res/layout/people_activity.xml
@@ -9,23 +9,14 @@
         android:fitsSystemWindows="true"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?colorPrimary"
-            android:minHeight="?actionBarSize"
-            app:contentInsetStart="@dimen/second_keyline"
-            app:layout_scrollFlags="scroll|enterAlways" />
-
         <android.support.design.widget.TabLayout
             android:id="@+id/tabStrip"
-            android:scrollbars="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="horizontal"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:tabMode="scrollable"
-            app:tabGravity="fill" />
+            app:tabGravity="fill"
+            app:tabMode="scrollable" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
