--- a/app/src/main/res/layout/list_fragment_with_fab.xml
+++ b/app/src/main/res/layout/list_fragment_with_fab.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:id="@id/listContentFL"
-             android:background="@color/gray_github_light">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@id/listContentFL"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/gray_github_light">
 
     <FrameLayout
         android:id="@+id/listContainer"
@@ -11,15 +12,15 @@
         android:layout_height="match_parent">
 
         <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/swipe">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@id/recycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:drawSelectorOnTop="false"/>
+                android:drawSelectorOnTop="false" />
         </android.support.v4.widget.SwipeRefreshLayout>
     </FrameLayout>
 
@@ -27,17 +28,27 @@
         layout="@layout/fab"
         android:layout_width="@dimen/fab"
         android:layout_height="@dimen/fab"
-        android:layout_margin="@dimen/gapLarge"
         android:layout_gravity="bottom|right|end"
-        android:visibility="gone"/>
+        android:layout_margin="@dimen/gapLarge"
+        android:visibility="gone" />
 
     <tr.xip.errorview.ErrorView xmlns:errorview="http://schemas.android.com/apk/res-auto"
         android:id="@+id/error_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        errorview:ev_showTitle="true"
-        errorview:ev_showSubtitle="true"
-        errorview:ev_showRetryButton="true"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        errorview:ev_showRetryButton="true"
+        errorview:ev_showSubtitle="true"
+        errorview:ev_showTitle="true" />
+
+    <ProgressBar
+        android:id="@+id/loading_view"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="?attr/listPreferredItemHeight"
+        android:layout_height="?attr/listPreferredItemHeight"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="gone"
+        tools:visibility="visible" />
 </FrameLayout>
