--- a/app/src/release/res/values/colors.xml
+++ b/app/src/release/res/values/colors.xml
@@ -6,8 +6,8 @@
     <color name="primary_dark_alpha">#FF303F9F</color>
 
     <color name="primary_light">#C5CAE9</color>
-    <color name="accent">#FF009688</color>
-    <color name="accent_dark">#ff006e60</color>
+    <color name="accent">#FF5722</color>
+    <color name="accent_dark">#ffba3f19</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#B6B6B6</color>
