Reauth user on delete_repo request

--- a/app/src/main/res/xml/repository_manager_prefs.xml
+++ b/app/src/main/res/xml/repository_manager_prefs.xml
@@ -34,4 +34,9 @@
         android:title="@string/pref_repo_default_branch"
         android:summary="@string/pref_repo_default_branch_summary" />
 
+    <Preference
+        android:key="pref_repo_delete"
+        android:title="@string/pref_repo_delete"
+        android:summary="@string/pref_repo_delete_repository" />
+
 </PreferenceScreen>
