Navigate up to repository from issue, or open assigne / user that created the issue / PR

--- a/app/src/main/res/layout/pullrequest_detail_issue_view.xml
+++ b/app/src/main/res/layout/pullrequest_detail_issue_view.xml
@@ -95,6 +95,13 @@
                     android:layout_marginLeft="@dimen/gapLarge" />
 
                 <TextView
+                    android:id="@+id/textRepository"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    style="@style/new_issue_push_access_row"
+                    android:layout_marginLeft="@dimen/gapLarge" />
+
+                <TextView
                     android:id="@+id/textMilestone"
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
