--- a/app/src/main/res/layout/content_commits_activity.xml
+++ b/app/src/main/res/layout/content_commits_activity.xml
@@ -4,7 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/toolbar" />
+
+        <ViewStub
+            android:id="@+id/cab_stub"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize" />
+    </FrameLayout>
 
     <LinearBreadcrumb
         android:id="@+id/breadCrumbs"
