--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,20 @@
         <item name="color">@color/white</item>
     </style>
 
+    <style name="DrawerArrowStyleGray" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@color/gray_github_medium</item>
+    </style>
+
     <style name="GistFileRowToolbar" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorSecondary">@color/accent</item>
     </style>
+
     <style name="FileRowToolbar" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorPrimary">@color/black_semi_transparent</item>
         <item name="android:textColorSecondary">@color/accent</item>
     </style>
+
     <style name="CommitContentRowToolbar" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorPrimary">@color/black_semi_transparent</item>
         <item name="android:textColorSecondary">@color/accent</item>
@@ -93,6 +100,7 @@
     <style name="SpotDialog.loading_adding_milestones">
         <item name="DialogTitleText">@string/adding_milestone</item>
     </style>
+
     <style name="SpotDialog.loading_adding_comment">
         <item name="DialogTitleText">@string/adding_comment</item>
     </style>
@@ -100,6 +108,7 @@
     <style name="SpotDialog.loading_adding_assignee">
         <item name="DialogTitleText">@string/adding_assignee</item>
     </style>
+
     <style name="SpotDialog.loading_merging">
         <item name="DialogTitleText">@string/merging</item>
     </style>
