--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,23 @@
         <item name="gitskarios_icons">@color/icons</item>
     </style>
 
+
+    <style name="AppThemeSearch" parent="AppTheme.AppCompat.Default">
+        <item name="windowActionModeOverlay">false</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyleGray</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/gray_github_dark</item>
+        <item name="colorAccent">@color/gray_github_dark</item>
+        <item name="colorControlNormal">@color/gray_github_medium</item>
+        <item name="colorControlActivated">@color/gray_github_dark</item>
+        <item name="colorControlHighlight">@color/gray_github_dark</item>
+        <item name="gitskarios_divider">@color/divider</item>
+        <item name="gitskarios_primary_text">@color/primary_text</item>
+        <item name="gitskarios_secondary_text">@color/secondary_text</item>
+        <item name="gitskarios_primary_light">@color/gray_github_light</item>
+        <item name="gitskarios_icons">@color/icons</item>
+    </style>
+
     <!-- Default application theme. -->
     <style name="AppTheme.AppCompat.Default" parent="Theme.AppCompat.Light.NoActionBar">
 
@@ -61,7 +78,8 @@
 
         <!-- Toolbar styles -->
         <item name="toolbarStyle">@style/Custom.Widget.Toolbar</item>
-        <item name="toolbarNavigationButtonStyle">@style/Custom.Widget.Toolbar.Button.Navigation</item>
+        <item name="toolbarNavigationButtonStyle">@style/Custom.Widget.Toolbar.Button.Navigation
+        </item>
         <item name="actionOverflowButtonStyle">@style/Custom.Widget.ActionButton.Overflow</item>
 
 
@@ -77,7 +95,6 @@
 
 
     </style>
-
 
 
     <style name="Toolbar.AppCompat.Light.Responsive" parent="AppTheme.AppCompat.Responsive">
