--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -200,4 +200,12 @@
         <item name="android:paddingRight">@dimen/material_drawer_vertical_padding</item>
         <item name="android:paddingStart">@dimen/material_drawer_vertical_padding</item>
     </style>
+
+    <style name="PlaceholderRepoAbout" parent="Base.TextAppearance.AppCompat.Subhead">
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">?selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:gravity">center_vertical|left</item>
+        <item name="android:drawablePadding">@dimen/gapMedium</item>
+    </style>
 </resources>
