* update com.mikepenz libraries  * update MaterialDrawer   * modify all MaterialDrawer specific code to fit to the new MaterialDrawer version  * update AboutLibraries  * update Android-Iconics   * update Octicons   * update Google Material Icons

--- a/app/src/main/res/layout/issue_detail_issue_timeline_secondary_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_timeline_secondary_view.xml
@@ -19,7 +19,7 @@
         android:layout_marginLeft="-18dp"
         android:layout_marginTop="@dimen/gapMedium"
         android:clickable="false"
-        app:biv_maskDrawable="@drawable/circle_mask" />
+        app:biv_maskDrawable="@drawable/material_drawer_circle_mask" />
 
     <TextView
         android:id="@+id/shaContent"
