--- a/app/src/main/res/layout/issue_detail_labels.xml
+++ b/app/src/main/res/layout/issue_detail_labels.xml
@@ -27,7 +27,7 @@
             android:layout_marginEnd="@dimen/material_drawer_item_profile_icon_padding"
             android:clickable="false"
             android:elevation="1dp"
-            app:biv_maskDrawable="@drawable/circle_mask"
+            app:biv_maskDrawable="@drawable/material_drawer_circle_mask"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
