--- a/app/src/main/res/layout/material_drawer_item_profile_copy.xml
+++ b/app/src/main/res/layout/material_drawer_item_profile_copy.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="center_vertical"
         android:clickable="false"
         android:elevation="1dp"
-        app:biv_maskDrawable="@drawable/circle_mask"/>
+        app:biv_maskDrawable="@drawable/material_drawer_circle_mask" />
 
     <LinearLayout
         android:layout_toRightOf="@id/profileIcon"
