--- a/app/src/main/res/layout/release_detail_fragment.xml
+++ b/app/src/main/res/layout/release_detail_fragment.xml
@@ -28,7 +28,7 @@
                 android:layout_marginRight="@dimen/material_drawer_item_profile_icon_padding"
                 android:layout_marginTop="@dimen/material_drawer_item_profile_icon_padding"
                 android:clickable="false"
-                app:biv_maskDrawable="@drawable/circle_mask" />
+                app:biv_maskDrawable="@drawable/material_drawer_circle_mask" />
 
             <TextView
                 android:id="@+id/authorName"
