--- a/app/src/main/res/menu/repo_detail_activity.xml
+++ b/app/src/main/res/menu/repo_detail_activity.xml
@@ -15,4 +15,10 @@
         app:showAsAction="ifRoom"
         android:orderInCategory="2" />
 
+    <item
+        android:id="@+id/action_add_shortcut"
+        android:title="@string/action_add_shortcut"
+        app:showAsAction="never"
+        android:orderInCategory="3" />
+
 </menu>
