--- a/app/src/main/res/menu/issue_detail_no_permissions.xml
+++ b/app/src/main/res/menu/issue_detail_no_permissions.xml
@@ -7,4 +7,10 @@
         android:title="@string/action_share_issue"
         app:showAsAction="ifRoom"
         android:orderInCategory="1" />
+
+    <item
+        android:id="@+id/action_add_shortcut"
+        android:title="@string/action_add_shortcut"
+        app:showAsAction="never"
+        android:orderInCategory="3" />
 </menu>
