--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -23,6 +23,7 @@
     <item name="scrollable" type="id">scroll</item>
     <item name="fabLayout" type="id">fabLayout</item>
     <item name="cardsContainerScroll" type="id">cardsContainerScroll</item>
+    <item name="nav_drawer_notifications" type="id">nav_drawer_notifications</item>
     <item name="nav_drawer_events" type="id">nav_drawer_events</item>
     <item name="nav_drawer_repositories" type="id">nav_drawer_repositories</item>
     <item name="nav_drawer_starred_repositories" type="id">nav_drawer_starred_repositories</item>
