--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -80,5 +80,6 @@
     <dimen name="toolbar_h_padding">4dp</dimen>
     <dimen name="extra_action_bar_size">88dp</dimen>
     <dimen name="profile_header">224dp</dimen>
+    <dimen name="material_drawer_item_secondary_description">12sp</dimen>
 
 </resources>
